# GesturesAR

./: .gitignore  CalibratorHands.py  Converter.py  DatabaseGenerator.py  FeaturesDetection.py  README.md  crop.py  run_GesturesAR.sh  run_tcc.sh
GANeratedHands/GanHandsAPI/data/HandTracker/: ConfigFile.params
GANeratedHands/GanHandsAPI/src/: main.cpp
Panda3D/AR_Test/: Trajetoria.txt  Trajetoria2.txt  coordenadas.txt  hands.txt  main.py
Panda3D/AR_Test/models/: Simple_Handv2.gltf
Panda3D/WebCam/: main.py
SharedMemory/: CMakeLists.txt  Makefile  camera_parameters.h  destroy_shmem.c  destroy_shmem.cpp  get_cam.cpp  hands_get_message.cpp  read_shmem.c  read_shmem.cpp  share_cam.cpp  shared_memory.c  shared_memory.cpp  shared_memory.h  slam_get_cam.cpp  slam_get_message.cpp  virtual_camera.cpp  virtual_camera_handler.cpp  virtual_camera_handler.h  virtual_camera_test.cpp  webcam.c  webcam.cpp  write_shmem.c  write_shmem.cpp  yolo_get_cam.cpp  yolo_get_message.cpp
SharedMemory/python/: ARScene.py  FeaturesDetection.py  crop.py  messages_handler.py
SharedMemory/src/: destroy_shmem.cpp  get_message_hands.cpp  get_message_slam.cpp  hands_get_message.cpp  messages_handler.cpp  share_cam.cpp  slam_get_cam.cpp  slam_get_message.cpp  tester.cpp  virtual_camera.cpp  yolo_get_cam.cpp  yolo_get_message.cpp
src/: CMakeLists.txt
src/cpp/: destroy_shmem.cpp  get_message_slam_plane.cpp  get_message_yolo.cpp  share_cam.cpp  shared_memory.cpp  slam_plane_receiver_prototype.cpp  slam_plane_sender_prototype.cpp  tester.cpp  tester_receiver.cpp  tester_sender.cpp  virtual_camera.cpp  yolo_correction_sender.cpp
src/includes/: camera_parameters.h  shared_memory.h  virtual_camera_handler.h
src/python/: ARScene.py  DistanceCalibrator.py  FeaturesDetection.py  Homograph.py  Homography.py  HorizontalPlaneCorrection.py  ObjectDetection.py  ObjectMeasurements.py  Panda3D.py  ValidationSIFT.py  ValidationYOLO.py  WebCamTest.py  test.py
src/python/ar/: groot.patt  groot_720.patt
src/python/models/: Cube.egg.pz  cilindro.egg  cylinder.egg  screwdriver.egg  wrench.egg
